nginx fix clearn

--- a/WinswNginx/vhost/index.html
+++ b/WinswNginx/vhost/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div style="padding: 24px 48px;"> 
-<h1>Welcome</h1> 
+<h1>Welcome Nginx vHost Html </h1> 
+<h2><a href="index.php">vHost PHP</a> </h2> 
 </div>
 </body>
 </html>
