--- a/WinswNginx/html/index.html
+++ b/WinswNginx/html/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv=Content-Type content="text/html;charset=utf-8">
+<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+<meta content=always name=referrer>
 <title>Welcome to nginx!</title>
 <style>
     body {
